--- a/travis.yaml
+++ b/travis.yaml
@@ -6,6 +6,14 @@ android:
     # use the latest revision of Android SDK Tools
     # - tools
     # - platform-tools
+    - build-tools-26.0.2
+    - android-26
+    - add-on
+    - extra
+    licenses:
+      - 'android-sdk-preview-license-52d11cd2'
+      - 'android-sdk-license-.+'
+      - 'google-gdk-license-.+'
 
     # The BuildTools version used by your project
     - build-tools-29.0.0
