--- a/travis.yaml
+++ b/travis.yaml
@@ -1,32 +1,29 @@
 language: android
-dist: trusty
+jdk: oraclejdk8
+env:
+  global:
+    - ANDROID_API_LEVEL=29
+    - ANDROID_BUILD_TOOLS_VERSION=29.0.0
 android:
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
-    - build-tools-26.0.2
-    - android-26
-    - add-on
-    - extra
-    licenses:
-      - 'android-sdk-preview-license-52d11cd2'
-      - 'android-sdk-license-.+'
-      - 'google-gdk-license-.+'
-
+    - tools
+    - platform-tools
     # The BuildTools version used by your project
-    - build-tools-29.0.0
-
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     # The SDK version used to compile your project
-    - android-29
-
+    - android-$ANDROID_API_LEVEL
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-29
-    - sys-img-armeabi-v7a-android-17
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+before_script:
+  # Prepare pre-accepted licenses to not be promted at installation
+  - mkdir -p "$ANDROID_HOME/licenses"
+  - cp ./google-licenses/* "$ANDROID_HOME/licenses/"
+script:
+  - ./gradlew build check
